crystal-facet-uml (1.58.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in create mode, a click on a feature does not create another feature
  * in create mode, a click on a lifeline selects the classifier

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 11 May 2024 19:00:00 +0200

crystal-facet-uml (1.58.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * selecting contained classifiers is possible again

 -- Andreas Warnke <cfu@andreaswarnke.de>  Tue, 07 May 2024 06:00:00 +0200

crystal-facet-uml (1.58.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in create mode, the mouse-over element-part is highlighted
  * in edit mode, less accidential selections of the surrounding diagram
  * diagrams provide more automatic line breaks at features, relationships

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 05 May 2024 12:00:00 +0200

crystal-facet-uml (1.57.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * diagrams provide more automatic line breaks in classifier names

 -- Andreas Warnke <cfu@andreaswarnke.de>  Mon, 08 Apr 2024 21:30:00 +0200

crystal-facet-uml (1.56.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * database supports worst-case length of diagram description texts
  * test cases can be selected more finegranular, test coverage more accurate
  * test coverage on u8stream package increased
  * on windows, the pango-rendered fonts are not cut on the top line of pixels

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 23 Mar 2024 05:00:00 +0100

crystal-facet-uml (1.56.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * gtk3 support dropped, more than 100 #if preprocessor-statements removed
  * GtkFileChooserDialog replaced by GtkFileDialog (without filetype selection)
  * deprecated function gdk_pixbuf_get_from_texture replaced
  * XMI export traces if a classifier contains a child twice (in DEBUG mode)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 03 Mar 2024 10:00:00 +0100
