@@ -3,6 +3,7 @@ crystal-facet-uml (1.58.2) UNRELEASED; urgency=medium
   [ Andreas Warnke ]
   * in create mode, a click on a feature does not create another feature
   * in create mode, a click on a lifeline selects the classifier
+  * in create mode, a click on a classifier name selects it
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 11 May 2024 19:00:00 +0200
 
